--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,15 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "/api/**",
+        "function": "api"
+      }
     ]
+  },
+  "functions": {
+    "source": "functions"
   }
 }
